--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "classnames": "^2.5.1",
     "express": "^5.2.1",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0",
-    "react-router-dom": "^7.13.1"
+    "react-dom": "^19.2.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
